# ircord

./: CMakeLists.txt  README.md
src/: command.hpp  command_context.cpp  command_context.hpp  command_registry.cpp  command_registry.hpp  main.cpp
src/commands/: ban.cpp  commands.hpp  help.cpp  kick.cpp  logtail.cpp  restart.cpp  shutdown.cpp  status.cpp  tui.cpp  update.cpp  users.cpp  version.cpp
